Run Selenium UI tests -windows-latest

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -119,7 +119,7 @@ stages:
     dependsOn: Deploy
     displayName: 'Run UI tests'
     pool:
-      vmImage: 'windows-2010'
+      vmImage: 'windows-latest'
     variables:
     - group: 'Release'
     steps: 
